deprecated/selfhost-v1/kubernetes-v1/whiteboard/be-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whiteboard-be
  namespace: whiteboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whiteboard-be
  template:
    metadata:
      labels:
        app: whiteboard-be
    spec:
      containers:
        - name: whiteboard-be
          image: registry.dungxbuif.com/whiteboard/whiteboard-be:592db6a9b3127af2c4c8bad713e62199e62d9269
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
